# receipt_bot

./: Cargo.toml  README.md
src/: db_interface.rs  lib.rs  main.rs  models.rs  qr_reader.rs  schema.rs  web_scraper.rs
