[package]
name = "receipt_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.9", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"
image = "0.24.0"
rqrr = "0.5.1"